--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,72 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>THPWeek6Project1</title>
+    <title><%= yield(:title) %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!--  Font Awesome  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" crossorigin="anonymous">
+    <!-- BOOTSWATCH -->
+    <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/sketchy/bootstrap.min.css" rel="stylesheet" integrity="sha384-N8DsABZCqc1XWbg/bAlIDk7AS/yNzT5fcKzg/TwfmTuUqZhGquVmpb5VvfmLcMzp" crossorigin="anonymous">
+
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <!-- NAVBAR  --> 
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <%= link_to "Pop Events", root_path   , class: "navbar-brand" %>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarColor01">
+        <ul class="navbar-nav mr-auto">
+          <% if user_signed_in? %>
+          <li class="nav-item active">
+            <%= link_to "Create an Event", new_event_path, class: "navbar-brand" %>
+          </li>
+          <% end %>
+          <li class="nav-item">
+            <%= link_to "Team", team_index_path, class: "navbar-brand" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Contact us", contact_index_path, class: "navbar-brand" %>
+          </li>
+        </ul>
+        <ul class="navbar-nav ">
+          <% if user_signed_in? %>
+
+          <%= link_to current_user.first_name, user_path(current_user.id), class: "navbar-brand" %>
+          <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "navbar-brand" %>
+
+          <% else %>
+
+          <%= link_to "Sign Up", new_user_registration_path, class: "navbar-brand" %>
+          <%= link_to "Login", new_user_session_url, class: "navbar-brand" %>
+          
+          <% end %>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- FLASH MESSAGES -->
+
+    <% flash.each do |key, value| %>
+      <%= content_tag :div, value, class: "alert-#{key}" %>
+    <% end %>
+
+
+
     <%= yield %>
   </body>
 </html>
