--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,22 @@
  *= require_tree .
  *= require_self
  */
+
+@import "font-awesome-sprockets";
+@import "font-awesome";
+@import 'datetime_picker_input';
+
+a {
+	text-decoration: none !important;
+}
+
+.card-event:hover {
+	background-color: #19a2b845;
+
+}
+.carousel-control-next:hover {
+	background-color: transparent;
+}
+.carousel-control-prev:hover {
+	background-color: transparent;
+}
