--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,25 +1,60 @@
+<% content_for :title, "Buy Tickets for Events and Shows" %>
+
+<!-- Caroussel of Top 3 selling events -->
+<div class="carouselContainer mt-3 mb-3">
+	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+		<!-- Indicators -->
+		<ol class="carousel-indicators">
+			<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+			<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+			<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+		</ol>
+	  <!-- Wrapper for slides -->
+	  	<div class="carousel-inner" role="listbox">
+	    	<div class="carousel-item active">
+	    		<%= image_tag ( "axel.jpg"),style: 'height:550px;width:1100px;' %>
+	    	</div>
+
+	    <div class="carousel-item">
+	      <%= image_tag ( "angele.jpg"), style: 'height:550px;width:1100px;'%>
+	    </div>
+
+	    <div class="carousel-item">
+	      <%= image_tag ( "celine.jpg"), style: 'height:550px;width:1100px;'%>
+	    </div>
+	  </div>
+	  <!-- Controls -->
+	 	<a class="carousel-control-prev" href="#carousel-example-generic" role="button" data-slide="prev">
+	  	<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+	        <span class="sr-only">Previous</span>
+	    </a>
+	    <a class="carousel-control-next" href="#carousel-example-generic" role="button" data-slide="next">
+	        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+	        <span class="sr-only">Next</span>
+	    </a>
+	</div>
+</div>
+
+<!-- List of Events -->
+<div class="container-fluid">
+  	<div class="row">
+	    <% @events.each do |event| %>
+	    	<%= link_to event do %>
+			    <div class= "col-sm m-2 text-center" >
+			     	<div class="card" style="width: 18rem; text-decoration: none;">
+			        	<div class="card-body card-event">
+			        		<p class="text-info"><%= event.location %></p>
+			         		<h5 class="text-info"><%= event.title %></h5>
+			         		<p class="text-info"><%= event.start_date.strftime("%B %d, %Y")%></p>
+			          		<%= link_to "Buy Now", new_attendance_path , class: "btn btn-danger text-white" %>
+			       		</div>
+			      	</div>
+			    </div>
+			<% end %>
+		<% end %>
+	</div>
+</div>
 
 
-<h1>Events</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @events.each do |event| %>
-      <tr>
-        <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
 
 <%= link_to 'New Event', new_event_path %>
