--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,8 +1,8 @@
-Salut <%= @user.first_name %> et bienvenue chez nous !
+Hello <%= @user.first_name %> and welcome to Pop Events !
 ==========================================================
  
-Tu t'es inscrit sur monsite.fr en utilisant l'e-mail suivant : <%= @user.email %>.
+You registered on Pop events with the mail : <%= @user.email %>.
  
-Pour accéder à ton espace client, connecte-toi via : <%= @url %>.
- 
-À très vite sur monsite.fr !
+Connect to your user dashboard at : <%= @url %>.
+
+See you soon on Pop events !
