--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,56 +1,62 @@
-<div class="container">
-  <div class="row">
-  	<div class="col-md-6">
-    
-      <div class="panel panel-default">
-			<div class="panel-body">
-              		<div class="row">
-                        <div class="col-xs-12 col-sm-8">
-                            <h2></h2>
-                            <p><strong>email: </strong> Web Designer / UI. </p>
-                            <p><strong>description: </strong> Read, out with friends, listen to music, draw and learn new things. </p>
-                            <p><strong>Skills: </strong>
-                                <span class="label label-info tags">html5</span> 
-                                <span class="label label-info tags">css3</span>
-                                <span class="label label-info tags">jquery</span>
-                                <span class="label label-info tags">bootstrap3</span>
-                            </p>
-                        </div><!--/col-->          
-                        <div class="col-xs-12 col-sm-4 text-center">
-                                <img src="http://api.randomuser.me/portraits/men/49.jpg" alt="" class="center-block img-circle img-responsive">
-                                <ul class="list-inline ratings text-center" title="Ratings">
-                                  <li><a href="#"><span class="fa fa-star fa-lg"></span></a></li>
-                                  <li><a href="#"><span class="fa fa-star fa-lg"></span></a></li>
-                                  <li><a href="#"><span class="fa fa-star fa-lg"></span></a></li>
-                                  <li><a href="#"><span class="fa fa-star fa-lg"></span></a></li>
-                                  <li><a href="#"><span class="fa fa-star fa-lg"></span></a></li>
-                                </ul>
-                        </div><!--/col-->
+<% content_for :title, @user.first_name+"' Page" %>
 
-                        <div class="col-xs-12 col-sm-4">
-                            <h2><strong> 20,7K </strong></h2>                    
-                            <p><small>Followers</small></p>
-                            <button class="btn btn-success btn-block"><span class="fa fa-plus-circle"></span> Follow </button>
-                        </div><!--/col-->
-                        <div class="col-xs-12 col-sm-4">
-                            <h2><strong>245</strong></h2>                    
-                            <p><small>Following</small></p>
-                            <button class="btn btn-info btn-block"><span class="fa fa-user"></span> View Profile </button>
-                        </div><!--/col-->
-                        <div class="col-xs-12 col-sm-4">
-                            <h2><strong>43</strong></h2>                    
-                            <p><small>Snippets</small></p>
-                            <button type="button" class="btn btn-primary btn-block"><span class="fa fa-gear"></span> Options </button>  
-                        </div><!--/col-->
-              		</div><!--/row-->
-              </div><!--/panel-body-->
-          </div><!--/panel-->
+<!-- Junbotron User -->
 
-    
-    
+<div class="jumbotron">
+  <h1 class="display-4">User's Profile : <%= @user.first_name %></h1>
+
+</div>
+
+
+<!-- Profile info -->
+
+<div class ='align-middle'>
+  <div class="card mt-5 ml-5 mr-5 p-4">
+    <div class="card-body">
+      <h5 class="card-title"><%= @user.first_name %> <%= @user.last_name %></h5>
+      <p class="card-title"><strong>Bio : </strong><%= @user.description %></p>
+      <p class="card-title"><strong>Mail : </strong> <%= @user.email %></p>
+      <p class="card-title"><strong>Profile created on : </strong><%= @user.created_at.strftime("%d/%m/%Y") %></p>
+      <p class="card-text"> <strong>Last update on : </strong><%= @user.updated_at.strftime("%d/%m/%Y") %></p>
     </div>
   </div>
 </div>
+
+<!-- Events AS admin -->
+<% if @admin %>
+  <% @admin_events.each do |event| %>
+        <%= link_to event do %>
+          <div class= "col-sm m-2 text-center" >
+            <div class="card" style="width: 18rem; text-decoration: none;">
+                <div class="card-body card-event">
+                  <p class="text-info"><%= event.location %></p>
+                  <h5 class="text-info"><%= event.title %></h5>
+                  <p class="text-info"><%= event.start_date.strftime("%B %d, %Y")%></p>
+                    <%= link_to "Buy Now", new_attendance_path , class: "btn btn-danger text-white" %>
+                </div>
+              </div>
+          </div>
+      <% end %>
+    <% end %>
+<% end %>
+
+<!-- Events AS guest -->
+<% if @guest %>
+  <% @guest_events.each do |event| %>
+        <%= link_to event do %>
+          <div class= "col-sm m-2 text-center" >
+            <div class="card" style="width: 18rem; text-decoration: none;">
+                <div class="card-body card-event">
+                  <p class="text-info"><%= event.location %></p>
+                  <h5 class="text-info"><%= event.title %></h5>
+                  <p class="text-info"><%= event.start_date.strftime("%B %d, %Y")%></p>
+                    <%= link_to "Buy Now", new_attendance_path , class: "btn btn-danger text-white" %>
+                </div>
+              </div>
+          </div>
+      <% end %>
+    <% end %>
+<% end %>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
