--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -13,23 +13,22 @@
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
   <h3> Create a new Event !</h3>
   <div class="row justify-content-center">
-    <p style = "width: 200px"> Title : <input type="text" name="Title"></p>
+    <p style = "width: 200px"> Title : <input type="text" name="title" value="<%= @event.title %>"></p>
   </div>
   <div class="row justify-content-center">
-    <p style = "width: 200px"> Description   : <input type="text" name="Description"></p>
+    <p style = "width: 200px"> Description   : <input type="text" name="description" value="<%= @event.description %>"></p>
   </div>
   <div class="row justify-content-center">
-    <p style = "width: 200px"> Location : <input type="text" name="Location"></p>
+    <p style = "width: 200px"> Location : <input type="text" name="location" value="<%= @event.location %>"></p>
   </div>
   <div class="row justify-content-center">
-    <p style = "width: 200px"> Price : <input type="number" name="Price"></p>
+    <p style = "width: 200px"> Price : <input type="number" name="price" value="<%= @event.price %>"></p>
   </div>
   <div class="row justify-content-center">
-    <%= form.input :when, as: :date_time_picker %>
-    <p style = "width: 200px"> Start Date : <input type="datetime" name="start_date"></p>
+    <p style = "width: 200px"> Start Date format : ('YYYY-MM-DD HH:mm:ss') <input type="datetime" name="start_date" value="<%= @event.start_date %>"></p>
   </div>
   <div class="row justify-content-center">
-    <p style = "width: 200px">Duration (must be a multiple of 5): <input type="number" name="duration"></p>
+    <p style = "width: 200px">Duration (must be a multiple of 5): <input type="number" name="duration" value="<%= @event.duration %>"></p>
   </div>
   <div class="actions">
     <%= form.submit %>
