--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,4 +1,5 @@
-<p id="notice"><%= notice %></p>
+
 
 <%= link_to 'Edit', edit_event_path(@event) %> |
 <%= link_to 'Back', events_path %>
+<%= link_to 'Destroy', event_path(@event), method: :delete, data: { confirm: 'Are you sure?' }  %>
