--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,13 @@
   </head>
 
   <body>
+
+    <!-- FLASH MESSAGES -->
+
+    <% flash.each do |key, value| %>
+      <%= content_tag :div, value, class: "alert-#{key}" %>
+    <% end %>
+    
     <!-- NAVBAR  --> 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <%= link_to "Pop Events", root_path   , class: "navbar-brand" %>
@@ -40,10 +47,10 @@
           </li>
           <% end %>
           <li class="nav-item">
-            <%= link_to "Team", team_index_path, class: "navbar-brand" %>
+            <%= link_to "Team", teams_path, class: "navbar-brand" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Contact us", contact_index_path, class: "navbar-brand" %>
+            <%= link_to "Contact us", contacts_path, class: "navbar-brand" %>
           </li>
         </ul>
         <ul class="navbar-nav ">
@@ -62,11 +69,6 @@
       </div>
     </nav>
 
-    <!-- FLASH MESSAGES -->
-
-    <% flash.each do |key, value| %>
-      <%= content_tag :div, value, class: "alert-#{key}" %>
-    <% end %>
 
 
 
