--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,12 +18,17 @@
       <p class="card-title"><strong>Mail : </strong> <%= @user.email %></p>
       <p class="card-title"><strong>Profile created on : </strong><%= @user.created_at.strftime("%d/%m/%Y") %></p>
       <p class="card-text"> <strong>Last update on : </strong><%= @user.updated_at.strftime("%d/%m/%Y") %></p>
+      <% if current_user.id == @user.id %>
+        <%= link_to 'Edit', edit_user_path(@user) %>
+        <%= link_to 'Destroy', users_path(@event), method: :delete, data: { confirm: 'Are you sure?' }  %>
+      <% end %>
     </div>
   </div>
 </div>
 
 <!-- Events AS admin -->
 <% if @admin %>
+  <h4 class="text-center"><%= @user.first_name %> is admin of <%= @admin_events.size %> events</h4>
   <% @admin_events.each do |event| %>
         <%= link_to event do %>
           <div class= "col-sm m-2 text-center" >
@@ -42,6 +47,7 @@
 
 <!-- Events AS guest -->
 <% if @guest %>
+  <h4 class="text-center"><%= @user.first_name %> is guest of <%= @guest_events.size %> events</h4>
   <% @guest_events.each do |event| %>
         <%= link_to event do %>
           <div class= "col-sm m-2 text-center" >
@@ -57,6 +63,3 @@
       <% end %>
     <% end %>
 <% end %>
-
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
