--- a/app/assets/stylesheets/contacts.scss
+++ b/app/assets/stylesheets/contacts.scss
@@ -69,8 +69,7 @@ textarea:-ms-input-placeholder { color: #999999; }
 /*---------------------------------------------*/
 button {
 	outline: none !important;
-	border: none;
-	background: transparent;
+	
 }
 
 button:hover {
@@ -78,7 +77,7 @@ button:hover {
 }
 
 iframe {
-	border: none !important;
+
 }
 
 
@@ -93,10 +92,10 @@ iframe {
   padding: 15px;
 
   background: #009bff;
-  background: -webkit-linear-gradient(left, #0072ff, #00c6ff);
-  background: -o-linear-gradient(left, #0072ff, #00c6ff);
-  background: -moz-linear-gradient(left, #0072ff, #00c6ff);
-  background: linear-gradient(left, #0072ff, #00c6ff);
+  background: -webkit-linear-gradient(left, #191919, #191919);
+  background: -o-linear-gradient(left, #191919, #191919);
+  background: -moz-linear-gradient(left, #191919, #191919);
+  background: linear-gradient(left, #191919, #191919);
 
   display: -webkit-box;
   display: -webkit-flex;
