--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,36 @@
+<% content_for :title, "Event page "+@event.title %>
+
+<!-- Junbotron User -->
+<div class="jumbotron">
+  <h1 class="display-4"><%= @event.title %></h1>
+  <p class="display-4"><%= @event.start_date.strftime("%d/%m/%Y") %></p>
+</div>
 
 
-<%= link_to 'Edit', edit_event_path(@event) %> |
-<%= link_to 'Back', events_path %>
-<%= link_to 'Destroy', event_path(@event), method: :delete, data: { confirm: 'Are you sure?' }  %>
+<!-- Profile info -->
+<div class ='align-middle'>
+  <div class="card mt-5 ml-5 mr-5 p-4">
+    <div class="card-body">
+    	<h5 class="card-title"><%= @event.title %> </h5>
+    	<p class="card-title"><strong>Producer : </strong><%= @admin.first_name %><%=" "%> <%=@admin.last_name %></p>
+    	<p class="card-title"><strong>Date : </strong> <%= @event.start_date.strftime("%h %d %Y, %H:%M") %></p>
+    	<p class="card-title"><strong>Duration : </strong><%= @event.duration %> min</p>
+    	<p class="card-title"><strong>Location : </strong><%= @event.location %></p>
+    	<p class="card-text"> <strong>Description : </strong><%= @event.description %></p>
+    	<p class="card-title"><strong>Event created the : </strong><%= @event.created_at.strftime("%d/%m/%Y") %></p>
+    	</br>	
+   		<p class="card-title"><strong>Price :</strong> <%= @event.price %>$ <%= link_to "Buy Now", new_attendance_path , class: "btn btn-danger text-white float-right" %></p>
+
+   		<p  class="card-title">This show has <%= @nb_guests %> participants</p>
+    	<% if is_event_admin?(@admin) %>
+        	<%= link_to 'Edit', edit_event_path(@event) %>
+        	<%= link_to 'Destroy', event_path(@event), method: :delete, data: { confirm: 'Are you sure?' }  %>
+      	<% end %>
+
+    </div>
+  </div>
+</div>
+
+
+
+
