--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,6 +21,10 @@ a {
 	text-decoration: none !important;
 }
 
+a:hover{
+	background-color: #fff0 !important;
+}
+
 .card-event:hover {
 	background-color: #19a2b845;
 
