--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, "Contact Us" %>
 <div class="contact1 mt-3">
 		<div class="container-contact1">
 			<div class="contact1-pic js-tilt" data-tilt>
