--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -11,22 +11,22 @@
 				</span>
 
 				<div class="wrap-input1 validate-input" data-validate = "Name is required">
-					<input class="input1" type="text" name="name" placeholder="Name">
+					<input class="input1" type="text" name="name" placeholder="Name" style="outline: none;">
 					<span class="shadow-input1"></span>
 				</div>
 
 				<div class="wrap-input1 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-					<input class="input1" type="text" name="email" placeholder="Email">
+					<input class="input1" type="text" name="email" style="outline: none;" placeholder="Email">
 					<span class="shadow-input1"></span>
 				</div>
 
 				<div class="wrap-input1 validate-input" data-validate = "Subject is required">
-					<input class="input1" type="text" name="subject" placeholder="Subject">
+					<input class="input1" type="text" style="outline: none;" name="subject" placeholder="Subject">
 					<span class="shadow-input1"></span>
 				</div>
 
 				<div class="wrap-input1 validate-input" data-validate = "Message is required">
-					<textarea class="input1" name="message" placeholder="Message"></textarea>
+					<textarea class="input1" name="message" style="outline: none;" placeholder="Message"></textarea>
 					<span class="shadow-input1"></span>
 				</div>
 
