--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,27 +1,27 @@
 <% content_for :title, "Register" %>
 
-<h2>Register</h2>
+<div class="text-center mt-5">
+<h2> Create your Account ! </h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-
-  <div class="field">
+  <div class="field mt-5">
     <%= f.label :first_name %><br />
-    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name"%>
+    <%= f.text_field :first_name, autofocus: true, autocomplete: "first_name", :size => 40 %>
   </div>
   <div class="field">
     <%= f.label :last_name %><br />
-    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name" %>
+    <%= f.text_field :last_name, autofocus: true, autocomplete: "last_name", :size => 40  %>
   </div>
   <div class="field">
     <%= f.label :description %><br />
-    <%= f.text_field :description, autofocus: true, autocomplete: "description" %>
+    <%= f.text_field :description, autofocus: true, autocomplete: "description", :size => 40  %>
   </div>
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", :size => 40  %>
   </div>
 
   <div class="field">
@@ -29,17 +29,17 @@
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, autocomplete: "new-password", :size => 40  %>
   </div>
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", :size => 40  %>
   </div>
 
-  <div class="actions">
+  <div class="actions mt-4">
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
-
+</div>
 <%= render "devise/shared/links" %>
