--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Event</h1>
-
+<% content_for :title, "Create a new Event" %>
+<div class="text-center mt-5">
+	<h1>New Event</h1>
+	<p>Create a new Event !</p>
+</div>
 <%= render 'form', event: @event %>
 
-<%= link_to 'Back', events_path %>
