--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, "Register" %>
-<h1>New User</h1>
+
+<h1>Create your Account !</h1>
 
 <%= render 'form', user: @user %>
 
-<%= link_to 'Back', users_path %>
